--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.12",
     "@vitejs/plugin-vue": "^4.2.3",
     "sass": "^1.69.5",
     "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.17.3",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5"
   }
