--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "element-plus": "^2.4.2",
+    "axios": "^1.6.2",
+    "element-plus": "^2.4.3",
     "pinia": "^2.1.7",
-    "vue": "^3.3.4",
-    "vue-router": "4"
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@iconify-json/ep": "^1.1.12",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^4.5.0",
     "sass": "^1.69.5",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-icons": "^0.17.3",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.5"
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.0"
   }
 }
